fix(VIPER-64): fix comment forgot password UI

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -41,7 +41,7 @@
   },
 
   "success": {
-    "success": "Successfull",
+    "success": "Password Sent Successfully",
     "check": "Your password has been successfully sent to your Email!"
   }
 }
