fix(VIPER-64): fix UI issue on Jira 2

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -22,7 +22,9 @@
       "invalidEmail": "Invalid Email",
       "emailRequired": "Required Email",
       "passwordMinLength": "Password Min Length",
-      "passwordRequired": "Password Required"
+      "passwordRequired": "Password Required",
+      "phoneMinLength": "Phone Min Length",
+      "phoneInvalid": "Phone Invalid"
     }
   },
 
