--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -18,31 +18,20 @@
       "enterEmail": "Nhập Email",
       "enterPassword": "Nhập Mật Khẩu",
       "enterName": "Nhập Tên",
-      "enterPhone": "Nhập Số Điện Thoại",
-      "newPassword": "Mật Khẩu Mới",
-      "conformPassword": "Xác nhận mật khẩu",
-      "invalidEmail": "Email Không Hợp Lệ",
-      "emailRequired": "Yêu Cầu Email",
-      "passwordMinLength": "Độ Dài Tổi Thiểu Của Mật Khẩu",
-      "password Required": "Yêu Cầu Mật Khẩu",
-      "phoneMinLength": "Độ Dài Tối Thiểu Của Số Điện Thoại",
-      "phoneInvalid": "Số Điện thoại không hợp lệ"
+      "enterPhone": "Nhập Số Điện Thoại"
     }
   },
 
   "register": {
     "signUpToPayment": "Đăng Ký Để Thanh Toán",
     "account": "Nếu bạn đã có tài khoản, bạn có thể",
-    "signInHere": "Đăng Nhập Tại Đây!",
-    "nameRequired": "Tên Yêu Cầu",
-    "phoneRequired": "Số Điện Thoại Yêu Cầu"
+    "signInHere": "Đăng Nhập Tại Đây!"
   },
 
   "login": {
     "signInToPayment": "Đăng Nhập Để Thanh Toán",
     "noAccount": "Nếu bạn chưa có tài khoản, bạn có thể",
-    "registerHere": "Đăng Ký Tại Đây!",
-    "recoverPassword": "Khôi Phục Mật Khẩu"
+    "registerHere": "Đăng Ký Tại Đây!"
   },
 
   "forgot": {
@@ -53,5 +42,27 @@
   "success": {
     "success": "Gửi Mật Khẩu Thành Công",
     "check": "Mật khẩu của bạn đã được gửi thành công đến Email!"
+  },
+
+  "validation": {
+    "email": {
+      "required": "Vui lòng nhập email của bạn!",
+      "invalid": "Vui lòng nhập email hợp lệ!"
+    },
+
+    "password": {
+      "required": "Vui lòng nhập mật khẩu!",
+      "invalid": "Mật khẩu phải có 8+ ký tự bao gồm chữ cái và số!"
+    },
+
+    "phone": {
+      "invalid": "Số điện thoại chỉ có thể nhập số!",
+      "min": "Độ Dài Tối Thiểu Của Số Điện Thoại",
+      "required": "Vui lòng nhập số điện thoại của bạn!"
+    },
+
+    "name": {
+      "nameRequired": "Vui lòng nhập tên của bạn!"
+    }
   }
 }
